# NinjaDesktopGames

./: CMakeLists.txt  README.md
.github/workflows/: cmake-linux_clang.yml  cmake-multi-platform.yml  cmake_linux_gcc.yml  cmake_mac.yml  cmake_windows.yml
common/: CMakeLists.txt  clickable.cpp  clickable.hpp  colour.cpp  colour.hpp  common.cpp  common.hpp  drawable.hpp  imgui.cmake  key_binding.hpp  menu.cpp  menu.hpp  nanovg.cmake  resources.cpp.in  resources.hpp  scene.hpp  toolbar.cpp  toolbar.hpp  toolbar_button.cpp  toolbar_button.hpp  toolbar_item.hpp  window.cpp  window.hpp
mines/: CMakeLists.txt  cell.cpp  cell.hpp  game.cpp  game.hpp  game_scene.cpp  game_scene.hpp  main.cpp  state.cpp  state.hpp
